# nft-security-analyzer

./: .gitignore  package-lock.json  render.yaml
backend/: .dockerignore  Dockerfile  api.py  pyproject.toml  requirements.txt  run_analyzer.py  setup.py  trace.dot
backend/contracts/: git9.sol  govermental_survey.sol  greeter.sol  high_risk_nft.sol  medium_nft.sol  reentrancy18.sol  test9.sol  test_multi.sol  test_multi2.sol  test_multi3.sol  test_multi_cycle.sol  test_multi_nft.sol  testcase1.sol  time_crowdsale.sol  wallet_sign.sol
backend/nftscanner/: cli.py  main.py  setup.py
backend/nftscanner/core/ast/: parser.py
backend/nftscanner/core/ir/: cfg_builder.py  graph.py  ir_builder.py
backend/nftscanner/core/models/: state.py
backend/nftscanner/nftscanner.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
backend/nftscanner/orchestration/: pipeline.py
backend/nftscanner/reporting/: auto_fix.py  reporter.py
backend/nftscanner/static_analysis/: engine.py  risk.py
backend/nftscanner/static_analysis/detectors/: nft_detector.py
backend/nftscanner/static_analysis/detectors/nft/: approval_abuse.py  hidden_mint.py  metadata_mutable.py  nft_property_detector.py  royalty_abuse.py  unlimited_mint.py  unsafe_transfer.py
backend/nftscanner/static_analysis/detectors/ownership/: centralized_control.py  (+1 more)
backend/nftscanner/symbolic_execution/detectors/: exploit_detector.py
backend/nftscanner/symbolic_execution/executor/: executor.py  explainer.py  tracer.py
backend/nftscanner/symbolic_execution/validation/: reentrancy.py  smt_checker.py  solver.py
(+12 files in other folders)
